<resources>
    <string name="app_name">FourEvent</string>
    <string name="shared_preferences_name">FourEvent</string>

    <string name="title_events">Eventi</string>
    <string name="title_details">Dettagli</string>
    <string name="title_ticket">Acquista il biglietto</string>

    <string name="events_not_found">Eventi non trovati</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Stringhe navigation drawer -->
    <string name="action_events">Eventi</string>
    <string name="action_favourites">Preferiti</string>
    <string name="action_tickets">Biglietti</string>

    <string name="action_profile">Profilo</string>
    <string name="action_wallet">Portafoglio</string>

    <string name="action_vote">Vota la nostra app!</string>
    <string name="action_logout">Esci</string>


    <!-- Stringhe fragment navigation drawer -->
    <string name="todo_events">TODO: Recycler view events</string>
    <string name="todo_participations">TODO: Recycler view participations</string>

    <string name="todo_profile">TODO: Recycler view profile</string>
    <string name="todo_wallet">TODO: Recycler view wallet</string>
    <string name="todo_settings">TODO: Recycler view settings</string>

    <!-- Stringhe categorie -->
    <string name="header_categories">Scegli le categorie di interesse</string>
    <string name="musica">MUSICA</string>
    <string name="tecnologia">TECNOLOGIA</string>
    <string name="lettura">LETTURA</string>
    <string name="sport">SPORT</string>
    <string name="moda">MODA</string>
    <string name="fotografia">FOTOGRAFIA</string>
    <string name="marketing">MARKETING</string>
    <string name="natura">NATURA</string>
    <string name="arte">ARTE</string>
    <string name="cibo">CIBO</string>
    <string name="viaggi">VIAGGI</string>
    <string name="videogiochi">VIDEOGIOCHI</string>

    <!-- Altro -->
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="euro">\u20ac</string>
    <string name="city">Italia</string>
    <string name="male_complete">Maschio</string>
    <string name="female_complete">Femmina</string>


    <!-- Text step3 -->
    <string name="first_text">Acquistare un BIGLIETTO non è mai stato così semplice!\n\nVai su un evento e premi sul bottone indicato in figura.\n\nNon hai crediti a sufficienza? Sarai diretto al portafoglio per ricaricarlo!</string>
    <string name="second_text">Gestire il PORTAFOGLIO è molto intuitivo!\n\nClicca sul bottone in figura e scegli l\'importo da ricaricare.\n\nPuoi visualizzare una lista delle ricariche e pagamenti effettuati per avere tutto sotto controllo!</string>

    <!--Dettagli biglietto -->
    <string name="description">Per effettuare il check-in all\'ingresso, puoi scegliere tra due modalità:\n\n<b>1.</b> Sincronizzare il tuo braccialetto <b>NFC</b> (se lo possiedi), avvicinandolo al dispositivo\n\n<b>2.</b> Far scansionare il codice <b>QR</b> dell\'evento all\'entrata.</string>
    <string name="sub_description">Buon divertimento!</string>
</resources>
