<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_events">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/action_events" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/action_favourites" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_tickets"
            android:title="@string/action_tickets" />
    </group>

    <group android:id="@+id/group_profile">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/action_wallet" />
    </group>

    <group android:id="@+id/group_app">
        <item
            android:id="@+id/nav_vote"
            android:icon="@drawable/ic_vote_app"
            android:title="@string/action_vote" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>

</menu>
